--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: DUT GEII 
+  uni: UBO
+  year: Novembre 2021
   # awards:
-  # summary:
+  # summary: mec soins
